-
Bug
-
Resolution: Fixed
-
Minor
-
Lustre 2.4.0
-
Any Lustre server using ZFS or ldiskfs
-
3
-
6325
Several problems exist for building support for back end file systems on Lustre. For example mount_utils_zfs.c doesn't build using the zfs source tree but instead one has to install the zfs development rpm on their build box to get it to compile. While testing ZFS stand alone also discovered was disabling ldiskfs build also failed in many ways. Mostly due to ldiskfs building being controlled under SERVER instead of LDISKFS_ENABLE. The work here will try to address these issues.