lustre/utils/mkfs_lustre.c
@@ -47,6 +47,7 @@
 #ifndef _GNU_SOURCE
 #define _GNU_SOURCE
 #endif
+#include "mount_utils.h"
 #include <stdlib.h>
 #include <stdio.h>
 #include <unistd.h>
@@ -77,7 +78,6 @@
 #include <lustre_param.h>
 #include <lnet/lnetctl.h>
 #include <lustre_ver.h>
-#include "mount_utils.h"
 
 #ifndef PATH_MAX
 #define PATH_MAX 4096
